# stockelper-portfolio

./: .dockerignore  .env.example  .gitignore  DESIGN_OPENAI_AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml
src/: __init__.py  main.py
src/multi_agent/: __init__.py  dart.py  utils.py
src/multi_agent/portfolio_analysis_agent/: __init__.py
src/multi_agent/portfolio_analysis_agent/tools/: __init__.py  portfolio.py
src/observability/: __init__.py  langfuse.py
src/portfolio_agents/: __init__.py  context.py  manager.py  schemas.py
src/portfolio_agents/agents/: __init__.py  search_agent.py  sell_agent.py  verifier_agent.py  view_agent.py  writer_agent.py
src/portfolio_multi_agent/: builder.py  state.py  utils.py
src/portfolio_multi_agent/nodes/: __init__.py  generate_views.py  get_financial_statement.py  get_portfolio_holdings.py  get_technical_indicator.py  load_user_context.py  portfolio_builder.py  portfolio_seller.py  portfolio_trader.py  ranking.py  sell_decision.py  web_search.py
src/portfolio_multi_agent/nodes/rank_func/: __init__.py  get_activity_rank.py  get_fall_rate_rank.py  get_growth_rank.py  get_market_cap_rank.py  get_net_income_rank.py  get_operating_profit_rank.py  get_profitability_rank.py  get_rise_rate_rank.py  get_stability_rank.py  get_total_liabilities_rank.py  get_volume_rank.py
src/routers/: portfolio.py
tests/: conftest.py  test_base_endpoints.py  test_core_logic.py  test_dart_key_rotation.py  test_portfolio_endpoints_mocked.py  test_recommendations_holdings_fill.py
